--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </nav>
         <div class="text-box">
             <h1 class="main-heading">Welcome</h1>
+            <h2>TEST</h2>
         </div>
     </header>
 
