--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
             </ul>
         </nav>
         <div class="text-box">
-            <h1 class="main-heading">Welcome</h1>
-            <h2>TEST</h2>
+            <h1 class="main-heading">Test Website</h1>
         </div>
     </header>
-
+    <!--
     <div class="website-boxes">
-        <div class="box box=1"></div>
-        <div class="box box=2"></div>
-        <div class="box box=3"></div>
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
     </div>
+-->
+
     <script src="" async defer></script>
 </body>
 
